Closed Bug 1557292 Opened 5 years ago Closed 5 years ago

Intermittent PID 5689 | Assertion failure: peerAddr.Contains(':') || ((bool)(__builtin_expect(!!(NS_FAILED_impl(aStatusCode)), 0))), at /builds/worker/workspace/build/src/netwerk/base/NetworkConnectivityService.cpp:281

Categories

(Core :: Networking, defect, P3)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- wontfix
firefox70 --- wontfix
firefox71 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: valentin)

References

Details

(Keywords: intermittent-failure, regression, Whiteboard: [necko-triaged][stockwell needswork:owner])

Attachments

(1 file)

Filed by: cbrindusan [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=250324880&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/bzYZl9bpRHSlJECiYvYp6A/runs/0/artifacts/public/logs/live_backing.log


10:10:35 INFO - TEST-START | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js
10:10:38 WARNING - TEST-UNEXPECTED-FAIL | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | xpcshell return code: 1
10:10:38 INFO - TEST-INFO took 2852ms
10:10:38 INFO - >>>>>>>
10:10:38 INFO - PID 5689 | [5689, Main Thread] WARNING: Couldn't get the user appdata directory. Crash events may not be produced.: file /builds/worker/workspace/build/src/toolkit/crashreporter/nsExceptionHandler.cpp, line 2514
10:10:38 INFO - PID 5689 | [5689, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, kKnownEsrVersion) failed with result 0x80004002: file /builds/worker/workspace/build/src/toolkit/components/resistfingerprinting/nsRFPService.cpp, line 662
10:10:38 INFO - PID 5689 | [5689, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012: file /builds/worker/workspace/build/src/extensions/permissions/nsPermissionManager.cpp, line 2903
10:10:38 INFO - (xpcshell/head.js) | test MAIN run_test pending (1)
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 0 pending (2)
10:10:38 INFO - (xpcshell/head.js) | test MAIN run_test finished (2)
10:10:38 INFO - running event loop
10:10:38 INFO - xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | Starting check_remote
10:10:38 INFO - (xpcshell/head.js) | test check_remote pending (2)
10:10:38 INFO - TEST-PASS | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | check_remote - [check_remote : 1] useRemoteWebExtensions matches - true == true
10:10:38 INFO - TEST-PASS | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | check_remote - [check_remote : 1] testing from extension process - false == false
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 0 finished (2)
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 1 pending (2)
10:10:38 INFO - (xpcshell/head.js) | test check_remote finished (2)
10:10:38 INFO - xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | Starting setup
10:10:38 INFO - (xpcshell/head.js) | test setup pending (2)
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 1 finished (2)
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 2 pending (2)
10:10:38 INFO - (xpcshell/head.js) | test setup finished (2)
10:10:38 INFO - xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | Starting test_captivePortal_basic
10:10:38 INFO - (xpcshell/head.js) | test test_captivePortal_basic pending (2)
10:10:38 INFO - "Extension attached"
10:10:38 INFO - (xpcshell/head.js) | test run_next_test 2 finished (2)
10:10:38 INFO - PID 5689 | ++DOCSHELL 0x11c424800 == 1 [pid = 5689] [id = {e3fa4011-0cfe-df44-a663-bc22b49189d3}]
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 1 (0x11ccc0020) [pid = 5689] [serial = 1] [outer = 0x0]
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 2 (0x11cc3b000) [pid = 5689] [serial = 2] [outer = 0x11ccc0020]
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 3 (0x11cb08400) [pid = 5689] [serial = 3] [outer = 0x11ccc0020]
10:10:38 INFO - PID 5689 | [Parent 5689, Main Thread] WARNING: Couldn't get the user appdata directory, crash dumps will go in an unusual location: file /builds/worker/workspace/build/src/toolkit/crashreporter/nsExceptionHandler.cpp, line 2584
10:10:38 INFO - PID 5689 | [Parent 5689, GMPThread] WARNING: Failed to delete GMP storage directory: file /builds/worker/workspace/build/src/dom/media/gmp/GMPServiceParent.cpp, line 1571
10:10:38 INFO - PID 5689 | [Parent 5689, Main Thread] WARNING: Need BrowserChild to get the nativeWindow from!: file /builds/worker/workspace/build/src/widget/PuppetWidget.cpp, line 1096
10:10:38 INFO - PID 5689 | ++DOCSHELL 0x11a5b7000 == 1 [pid = 5690] [id = {b0aaa4e6-bdea-f444-b8cf-7e881709cf39}]
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 1 (0x125727020) [pid = 5690] [serial = 1] [outer = 0x0]
10:10:38 INFO - PID 5689 | [Child 5690, Main Thread] WARNING: Fallback to BasicLayerManager: file /builds/worker/workspace/build/src/dom/ipc/BrowserChild.cpp, line 2657
10:10:38 INFO - PID 5689 | [Child 5690, Main Thread] WARNING: No active window: file /builds/worker/workspace/build/src/js/xpconnect/src/XPCJSContext.cpp, line 662
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 2 (0x11a58d400) [pid = 5690] [serial = 2] [outer = 0x125727020]
10:10:38 INFO - PID 5689 | ++DOMWINDOW == 3 (0x1257bcc00) [pid = 5690] [serial = 3] [outer = 0x125727020]
10:10:38 INFO - TEST-PASS | xpcshell-remote.ini:toolkit/components/extensions/test/xpcshell/test_ext_captivePortal.js | test_captivePortal_basic - [test_captivePortal_basic : 317] initial state unknown - Expected: unknown, Actual: unknown - true == true
10:10:38 INFO - PID 5689 | Assertion failure: peerAddr.Contains(':') || ((bool)(__builtin_expect(!!(NS_FAILED_impl(aStatusCode)), 0))), at /builds/worker/workspace/build/src/netwerk/base/NetworkConnectivityService.cpp:281

Component: Networking → General
Product: Core → WebExtensions
Component: General → Networking
Product: WebExtensions → Core

Valentin, can you look?

Flags: needinfo?(valentin.gosu)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → DUPLICATE

Wanted that the way around...

Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Status: REOPENED → NEW

OK, it seems these started with bug 1556911 and are OSX only.
IP connectivity checks are only performed in response to link checks, so it's odd why that happens.
As a related issue, I noticed we also call NetworkConnectivityService::Init twice in nsIOService (once via GetSingleton, and once manually).

Assignee: nobody → valentin.gosu
Flags: needinfo?(valentin.gosu)
OS: Unspecified → macOS
Priority: P5 → P3
Whiteboard: [necko-triaged]

There seems to be a spike of 29 failures on osx 10.14 debug in the last day: https://treeherder.mozilla.org/intermittent-failures.html#/bugdetails?startday=2019-06-29&endday=2019-07-06&tree=trunk&bug=1557292

Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=255042296&repo=autoland&lineNumber=4586

Nhi can you please take a look into it or redirect it to someone who could take care of it?

Flags: needinfo?(nhnguyen)

I filed bug 1564534 against macosx1014-64/debug as well, but I suspect my bug 1564534 and this bug are related.

See Also: → 1564534

single day spike. Valentin can look at this when he's back.

Flags: needinfo?(nhnguyen)
See Also: → 1563569

Valentin, it seems to me that the logic in bug 1502025 which tries to force IPv4/IPv6 is simply wrong. SetIPv4Disabled()/SetIPv6Disabled() ends up setting RESOLVE_DISABLE_IPV4/RESOLVE_DISABLE_IPV6 flag, which has no effect if proxy is used and the name resolution is made by the proxy. The request succeeds and the peer's address at https://searchfox.org/mozilla-central/rev/23f836a71cfe961373c8bd0d0219ec60a64b3c8f/netwerk/base/NetworkConnectivityService.cpp#297 is proxy's IP address which is most likely IPv4.

Flags: needinfo?(valentin.gosu)
Depends on: 1585569

(In reply to Michal Novotny [:michal] from comment #14)

Valentin, it seems to me that the logic in bug 1502025 which tries to force IPv4/IPv6 is simply wrong.

Agreed. We should make the NCS channels avoid the proxy entirely - similar to bug 1549393.
In the mean time I think we should just remove the assertion - and add it back once that's done.

I filed bug 1585569 for that.

Flags: needinfo?(valentin.gosu)

This check is wrong when channels are loaded using a proxy.
Bug 1585569 is supposed to fix the issue completely.

Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/c4157510d5a9
Remove assertion that channel is IPv6 r=michal
Status: NEW → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: