Bug 1557292 - Remove assertion that channel is IPv6 r=michal

This check is wrong when channels are loaded using a proxy.
Bug 1585569 is supposed to fix the issue completely.

Differential Revision: https://phabricator.services.mozilla.com/D47879

--HG--
extra : moz-landing-system : lando